<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity2"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="403dp"
        android:layout_height="442dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ta1"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/cat" />

            <ImageView
                android:id="@+id/ta2"
                android:layout_width="100dp"
                android:layout_height="178dp"
                app:srcCompat="@drawable/zebra" />

            <ImageView
                android:id="@+id/ta3"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/kanye" />

            <ImageView
                android:id="@+id/ta4"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/nancy" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/activity111"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Activity1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/activity333"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.730" />

    <Button
        android:id="@+id/activity333"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Activity3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/activity111"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.730" />

    <ImageView
        android:id="@+id/bigta"
        android:layout_width="250dp"
        android:layout_height="190dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity111"/>

</androidx.constraintlayout.widget.ConstraintLayout>